language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_type.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option\n\npub fn main(x) -> option.Option(Int) {\n    option.Some(1)\n}\n"
---
----- BEFORE ACTION

import option

pub fn main(x) -> option.Option(Int) {
                        ▔▔▔▔▔▔▔↑      
    option.Some(1)
}


----- AFTER ACTION

import option.{type Option}

pub fn main(x) -> Option(Int) {
    option.Some(1)
}
