language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_with_alias.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option as opt\n\npub fn main() {\n  opt.Some(1)\n}\n"
---
----- BEFORE ACTION

import option as opt

pub fn main() {
  opt.Some(1)
  ▔▔▔▔▔▔▔▔↑  
}


----- AFTER ACTION

import option.{Some} as opt

pub fn main() {
  Some(1)
}
