language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_with_comma_pos_not_end.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option.{None,   } as opt\n\npub fn main() {\n  opt.Some(1)\n}\n"
---
----- BEFORE ACTION

import option.{None,   } as opt

pub fn main() {
  opt.Some(1)
     ▔▔▔▔▔↑  
}


----- AFTER ACTION

import option.{None, Some   } as opt

pub fn main() {
  Some(1)
}
