language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_aliased_unused_value.snap
---
source: language-server/src/tests/action.rs
expression: "\n// test\nimport result.{is_ok as ok}\nimport option\n\npub fn main() {\n  result.is_ok\n}\n"
---
----- BEFORE ACTION

// test
▔▔▔▔▔▔▔
import result.{is_ok as ok}
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
import option
▔▔▔▔▔▔▔▔▔▔▔▔▔

pub fn main() {
↑              
  result.is_ok
}


----- AFTER ACTION

// test
import result.{}

pub fn main() {
  result.is_ok
}
