language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_block_1.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    { 1 }\n}\n"
---
----- BEFORE ACTION
pub fn main() {
    { 1 }
      ↑  
}


----- AFTER ACTION
pub fn main() {
     1 
}
