language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_block_2.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    { main() <> 2 }\n}\n"
---
----- BEFORE ACTION
pub fn main() {
    { main() <> 2 }
                  ↑
}


----- AFTER ACTION
pub fn main() {
     main() <> 2 
}
