language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_block_3.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n    case 1 {\n      _ -> { main() <> 2 }\n    }\n}\n"
---
----- BEFORE ACTION
pub fn main() {
    case 1 {
      _ -> { main() <> 2 }
           ↑              
    }
}


----- AFTER ACTION
pub fn main() {
    case 1 {
      _ ->  main() <> 2 
    }
}
