language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_block_triggers_on_the_innermost_selected_block.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(x) {\n    {\n      main({\n        1\n      })\n    }\n}\n"
---
----- BEFORE ACTION
pub fn main(x) {
    {
      main({
        1
        ↑
      })
    }
}


----- AFTER ACTION
pub fn main(x) {
    {
      main(
        1
      )
    }
}
